# mnist

./: .gitignore  README.md  pyproject.toml
src/: mnist.qmd
src/submission/: model0_basic.csv  model1_deeper.csv  model2_bn_do.csv  model3_long_train.csv  model4_adam.csv  model5_final.csv
