[tool.poetry]
name = "mnist"
version = "0.1.0"
description = ""
authors = ["Mathieu Marauri <mathieu.marauri@mfglabs.com>"]

[tool.poetry.dependencies]
python = "3.8.0"
tensorflow = "^2.9.1"
keras = "^2.9.0"
visualkeras = "^0.0.2"
jupyter-cache = "^0.5.0"
matplotlib = "^3.5.2"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
pandas = "^1.4.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
